# Phone-Address-Scraper

./: README.md  main.py  pyproject.toml
data/: 28k.csv
utils/: my_util.py
