[tool.poetry]
name = "phone-address-scraper"
version = "0.1.0"
description = ""
authors = ["Neel-Info <neel.poriya@infoanalytica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
simple-chalk = "^0.1.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
